# donald_2021

./: .gcloudignore  .gitignore  README.md  app.yaml  index.yaml  main.py  requirements-2022.txt  requirements-2023.txt  requirements.txt
.github/agents/: collate-post-data.agent.md
.github/instructions/: copilot-instructions.md
.github/instructions/data/: POST-data.instructions.md
.github/workflows/: render-md-mermaid.yml
application/: .gcloudignore  app.yaml  main.py  pyproject.toml  requirements.txt
application/static/: .gitignore  animations-2.js  animations-OSCILLATOR.js  animations.js  donald_2021.js  game.js
data/: collate_post_data.py
docs/: statemachine.dot
review-tool/: README.md  pyproject.toml
review-tool/src/review_tool/: __init__.py  comparator.py  tui.py  utils.py  validator.py
review-tool/tests/: README.md  __init__.py  conftest.py  test_comparison.py  test_extraction.py  test_rendering.py  test_tui_render_comparison.py
static/: .gitignore  animations-0.js  animations-1.js  animations-2.js  animations-3.js  animations-4.js  animations-COLORBLIND.js  animations-POLYSYNTH.js  donald_2021.js  game.js
templates/: index.html  query.html
