[project]
name = "donald-application"
version = "0.1.0"
description = "Server side Donald memory application"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "flask>=3.1.3",
    "google-api-core==2.24.2",
    "google-auth==2.38.0",
    "google-cloud-core==2.4.3",
    "google-cloud-datastore==2.20.2",
    "googleapis-common-protos==1.69.2",
    "grpcio==1.78.0",
    "grpcio-status==1.71.2",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "proto-plus==1.27.1",
    "protobuf==5.29.6",
    "pyasn1==0.6.2",
    "pyasn1_modules==0.4.2",
    "requests==2.32.5",
    "rsa==4.9.1",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "Werkzeug==3.1.5",
]
