[project]
name = "review-tool"
version = "0.1.0"
description = "Review student javascript animation submissions"
readme = "README.md"
authors = [
    { name = "Maarten Meijer", email = "m.j.meijer@hva.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.60.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
review-tool = "review_tool:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
